--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,9 +6,9 @@
     "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.ext.nunit": "1.0.6",
+    "com.unity.ide.rider": "3.0.16",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.4.4",
     "com.unity.mathematics": "1.2.6",
     "com.unity.purchasing": "4.5.1",
     "com.unity.services.mediation": "1.0.5",
